criando e estruturado a Main

--- a/src/components/Header/HeaderStyle.scss
+++ b/src/components/Header/HeaderStyle.scss
@@ -68,6 +68,8 @@
   
   .header__search input {
     background: transparent;
+    width: 100%;
+    height: 100%;
     border: none;
     padding: 0 1rem;
     color: var(--text-base-light);
@@ -96,7 +98,7 @@
     border:none;
   }
 
-  .header__search:hover {
+  .header__img-input:hover {
     border: 1px solid #fff;
   }
   
