--- a/src/partials/_colors.scss
+++ b/src/partials/_colors.scss
@@ -5,6 +5,7 @@
   /* COLORS */
   --bg-icon: rgb(19, 19, 19); /* #131313; */
   --bg-arrow-color: rgba(0, 0, 0, 0.6);
+  --card-color: rgb(24, 24, 24); // #181818
   --primary-color: #b3b3b3; /* #b3b3b3; */
   --secondary-color: rgb(18, 18, 18); /* #121212; */
   --tertiary-color: rgb(36, 36, 36); /* #242424; */
